# Auto_shutdown

./: .gitignore  AutoShutdown.spec  AutoShutdownHelper.spec  CHANGELOG.md  CLAUDE.md  Git管理工具.bat  README.md  build_exe.py  generate_icon.py  git-manager.ps1  main.py  pyproject.toml  requirements.txt  settings.json
.github/workflows/: build.yml
core/: __init__.py  anti_sleep.py  battery_analyzer.py  battery_monitor.py  brightness_controller.py  config_manager.py  countdown_manager.py  game_detector.py  holiday_api.py  power_manager.py  task_executor.py  task_scheduler.py
core/network_repair/: __init__.py  diagnosis_service.py  log_service.py  models.py  repair_service.py
core/notification/: __init__.py  email_sender.py
ui/: __init__.py  anti_sleep_settings_dialog.py  battery_settings_dialog.py  brightness_settings_dialog.py  email_settings_dialog.py  game_mode_settings_dialog.py  holiday_settings_dialog.py  low_battery_dialog.py  main_window.py  network_repair_dialog.py  reminder_dialog.py  reminder_settings_dialog.py  schedule_plan_dialog.py  timer_settings_dialog.py  widgets_dialog.py
